# julietscript

./: .gitignore  Cargo.toml  README.md  language-configuration.json  package.json
crates/julietscript-lint/: Cargo.toml
crates/julietscript-lint/src/: linter.js  main.rs
crates/julietscript-lint/tests/: cli.rs
prds/: main.md
src/: extension.js  linter.js
syntaxes/: julietscript.tmLanguage.json
test/: lint.test.js
